ejemplos con pug

--- a/pug/prepros-6.config
+++ b/pug/prepros-6.config
@@ -2,7 +2,12 @@
   "name": "pug",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "pug/02_atributos.pug",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"html/02_atributos.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "html",
@@ -20,7 +25,29 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "pug/12_incluir.pug",
+      "imports": [
+        "pug/head.pug",
+        "pug/foot.pug"
+      ]
+    },
+    {
+      "path": "pug/12_incluir_contenido_pug.pug",
+      "imports": [
+        "pug/head.pug",
+        "pug/foot.pug"
+      ]
+    },
+    {
+      "path": "pug/13_incluir_texto_plano.pug",
+      "imports": [
+        "pug/style.css",
+        "pug/script.js"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
@@ -63,7 +90,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7880,
+    "port": 7881,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
