--- a/pug/prepros-6.config
+++ b/pug/prepros-6.config
@@ -10,8 +10,9 @@
   ],
   "fileTree": {
     "expandedDirs": [
+      "pug",
       "html",
-      "pug"
+      "pug/includes"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -29,27 +30,40 @@
     {
       "path": "pug/12_incluir.pug",
       "imports": [
-        "pug/head.pug",
-        "pug/foot.pug"
+        "pug/includes/header.pug",
+        "pug/includes/footer.pug"
       ]
     },
     {
-      "path": "pug/12_incluir_contenido_pug.pug",
+      "path": "pug/13_incluir_texto.pug",
       "imports": [
-        "pug/head.pug",
-        "pug/foot.pug"
+        "pug/estilos.css",
+        "pug/codigo.js"
       ]
     },
     {
-      "path": "pug/13_incluir_texto_plano.pug",
+      "path": "pug/14_herencia.pug",
       "imports": [
-        "pug/style.css",
-        "pug/script.js"
+        "pug/includes/layout.pug"
+      ]
+    },
+    {
+      "path": "pug/mios/pug/12_incluir_contenido_pug.pug",
+      "imports": [
+        "pug/mios/pug/head.pug",
+        "pug/mios/pug/foot.pug"
+      ]
+    },
+    {
+      "path": "pug/mios/pug/13_incluir_texto_plano.pug",
+      "imports": [
+        "pug/mios/pug/style.css",
+        "pug/mios/pug/script.js"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
